--- a/react-scroll/react-scroll/src/styles.scss
+++ b/react-scroll/react-scroll/src/styles.scss
@@ -52,6 +52,10 @@ body {
     transform: translateX(0);
 }
 
+.animate{
+    will-change: transform, opacity;
+}
+
 
 .person-container {
     width: 100%;
