--- a/react-scroll/react-scroll/src/styles.scss
+++ b/react-scroll/react-scroll/src/styles.scss
@@ -51,11 +51,9 @@ body {
 .to {
     transform: translateX(0);
 }
-
-.animate{
-    will-change: transform, opacity;
+.miki{
+    display: block;
 }
-
 
 .person-container {
     width: 100%;
