scroll provider fix

--- a/npmpackages/nx-workspace/src/styles.scss
+++ b/npmpackages/nx-workspace/src/styles.scss
@@ -74,3 +74,14 @@ body {
     transition: .5s;
     transition-delay: 4s;
 }
+
+.person {
+    height: 30rem;
+    width: 100%;
+    background-color: gray;
+}
+
+.personitem {
+    height: 100rem;
+    width: 100%;
+}
